[gd_scene load_steps=8 format=3 uid="uid://c6lahxjqh1kiv"]

[ext_resource type="Texture2D" uid="uid://rr1m6wk2p8f0" path="res://third_party_assets/Cards/Card_Base_Plain_Beige.png" id="1_mgn23"]
[ext_resource type="Script" path="res://scenes/card/card.gd" id="1_ojbu6"]
[ext_resource type="Texture2D" uid="uid://cumrxksgntgdg" path="res://third_party_assets/Cards/Description_Area_Rectangle_Beige.png" id="2_cw476"]
[ext_resource type="Texture2D" uid="uid://dhx4vdppehoh1" path="res://third_party_assets/Cards/Cost_Crystal_Red.png" id="3_ktfkq"]
[ext_resource type="Texture2D" uid="uid://0ywsxkftwpme" path="res://third_party_assets/Cards/Cost_Crystal_Blue.png" id="4_l3gwx"]
[ext_resource type="Texture2D" uid="uid://m3ub6d0gbllw" path="res://third_party_assets/Cards/Image_Area_Round.png" id="6_5ivuk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2ofc"]
size = Vector2(50, 170)

[node name="Card" type="Button"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 128.0
offset_bottom = 184.0
script = ExtResource("1_ojbu6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mgn23")
expand_mode = 1

[node name="Description" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cw476")
expand_mode = 1

[node name="Title" type="Label" parent="TextureRect/Description"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0625
anchor_top = 0.695652
anchor_right = 0.9375
anchor_bottom = 0.956522
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Sess√£o de Feedback"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StressGain" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ktfkq")
expand_mode = 1

[node name="StressDisplay" type="Label" parent="TextureRect/StressGain"]
layout_mode = 0
offset_left = 104.0
offset_right = 128.0
offset_bottom = 23.0
text = "-10"

[node name="ProducitivyGain" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_l3gwx")
expand_mode = 1
flip_h = true

[node name="ProductivityDisplay" type="Label" parent="TextureRect/ProducitivyGain"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 23.0
text = "-20"

[node name="ImageFrame" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_5ivuk")

[node name="Image" type="TextureRect" parent="TextureRect/ImageFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EmployeeDetection" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EmployeeDetection"]
position = Vector2(63, 91)
shape = SubResource("RectangleShape2D_m2ofc")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="EmployeeDetection" to="." method="_on_employee_detection_area_entered"]
[connection signal="area_exited" from="EmployeeDetection" to="." method="_on_employee_detection_area_exited"]
